Bug 123757 - DOCX import: don't join different style tables (originally: Bad interpretation of table background color for .docx documents)
Summary: DOCX import: don't join different style tables (originally: Bad interpretatio...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.4 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, filter:docx
: 109297 (view as bug list)
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2019-02-28 08:39 UTC by Jérôme LEMAN GARIN
Modified: 2020-06-03 11:26 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Concerned file (16.39 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-02-28 08:43 UTC, Jérôme LEMAN GARIN
Details
MS Office behavior (32.45 KB, image/png)
2019-02-28 08:43 UTC, Jérôme LEMAN GARIN
Details
Onlyoffice behavior (41.69 KB, image/png)
2019-02-28 08:47 UTC, Jérôme LEMAN GARIN
Details
LO Behavior (57.28 KB, image/png)
2019-02-28 08:53 UTC, Jérôme LEMAN GARIN
Details
File in MSO and LO, before and after fix (53.95 KB, image/png)
2020-03-22 18:27 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jérôme LEMAN GARIN 2019-02-28 08:39:58 UTC
Description:
There is an issue opening a document in LO that was created with MS office, containing some tables with a blue background header and a white background content.

In MS Office, Onlyoffice and some others software, the interpretation is correct, please see the attached file as an example.

Steps to Reproduce:
1.Open the attached document in MS, Onlyoffice. Then open it in LO
2.
3.

Actual Results:
The background color of all table cells is blue.

Expected Results:
The background color of the last table cell should be white.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Comment 1 Jérôme LEMAN GARIN 2019-02-28 08:43:19 UTC
Created attachment 149647 [details]
Concerned file
Comment 2 Jérôme LEMAN GARIN 2019-02-28 08:43:40 UTC
Created attachment 149648 [details]
MS Office behavior
Comment 3 Jérôme LEMAN GARIN 2019-02-28 08:47:57 UTC
Created attachment 149649 [details]
Onlyoffice behavior
Comment 4 Jérôme LEMAN GARIN 2019-02-28 08:53:40 UTC
Created attachment 149650 [details]
LO Behavior
Comment 5 raal 2019-02-28 10:09:51 UTC
Confirm with LO 6.3
Comment 6 raal 2019-02-28 14:42:01 UTC
Miklos, background color was fixed in your commit?
author    Miklos Vajna <vmiklos@collabora.co.uk>    2014-10-02 18:00:34 +0200
committer    Miklos Vajna <vmiklos@collabora.co.uk>    2014-10-02 18:07:26 +0200
commit    78766aaa12ae4fae9dd2f3274617ba41de57eefd (patch)
tree    5a76ccb91ad339df101f10632ea59421b196add8
parent    dc358107b88badba60bc348564034ac2ad19c65c (diff)
DOCX import: handle <w:tcPr> directly under <w:style>

$ git bisect log
# bad: [489ffd1df414698b6cea9ab03bf6f663b8b5af7e] source-hash-3f94c9e9ddfd807b449f3bb9b232cf2041fa12d2
# good: [8aa9fc9a0c92172593d6cd97662116a965db229d] source-hash-dea4a3b9d7182700abeb4dc756a24a9e8dea8474
git bisect start 'master' 'oldest'
# good: [897913acd244cb6a5d2f4c2da1d625d9b978edb6] source-hash-ac57362b23859591c088e36b7218f4a606dcf3bb
git bisect good 897913acd244cb6a5d2f4c2da1d625d9b978edb6
# bad: [860f6172be84c3d801e1e533ab3d12a28815cb4c] source-hash-80c11d648e88f3195f7e4fb465cd6902bcf46867
git bisect bad 860f6172be84c3d801e1e533ab3d12a28815cb4c
# good: [7b3d20f1566547b2a04a348661168a22889676bf] source-hash-3b11057b75434526f67e678ddc1deb9ebd61c752
git bisect good 7b3d20f1566547b2a04a348661168a22889676bf
# good: [5bdfcb70293465ddd58b67708bb6deb4043ef2f1] source-hash-2b2246bb164ae58a39843218dcbcc425e4c38803
git bisect good 5bdfcb70293465ddd58b67708bb6deb4043ef2f1
# bad: [714123ff7ba1b67475f3b118152254e3641620d4] source-hash-9086a4bbd38b9a5320525392affe495e7772796a
git bisect bad 714123ff7ba1b67475f3b118152254e3641620d4
# good: [88d64fbf3f24ba35613c1a84be3cdaa77bad64ce] source-hash-00d39034138bdb84b1304f4b6a41f265d6715c90
git bisect good 88d64fbf3f24ba35613c1a84be3cdaa77bad64ce
# good: [07efab502d7fe2639cb103556fdec6409f0da096] source-hash-01fbbf42689360bee4813a380726ea2747f550f9
git bisect good 07efab502d7fe2639cb103556fdec6409f0da096
# good: [f5d5c59a63579d52ddd7b44e1bb37e407787a9a0] source-hash-ef6a120af64b5d64e6194c3e538ab6f6f73d4bc8
git bisect good f5d5c59a63579d52ddd7b44e1bb37e407787a9a0
# good: [14556a31d09fed9872eca1ecf237698131c56e63] source-hash-a7232e3f54c0c2ff1cb65d5d00027427ebb1016a
git bisect good 14556a31d09fed9872eca1ecf237698131c56e63
# good: [15655bc4666b995378227fa1c74042131bde872a] source-hash-37c00bff114fe39e553ea6f1b8e68d6c6ff93eba
git bisect good 15655bc4666b995378227fa1c74042131bde872a
# first bad commit: [714123ff7ba1b67475f3b118152254e3641620d4] source-hash-9086a4bbd38b9a5320525392affe495e7772796a

http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=37c00bff114fe39e553ea6f1b8e68d6c6ff93eba..9086a4bbd38b9a5320525392affe495e7772796a
Comment 7 Jérôme LEMAN GARIN 2019-03-18 10:45:20 UTC Comment hidden (no-value)
Comment 8 Xisco Faulí 2019-03-25 14:30:35 UTC
Reproduced since

Version: 4.4.0.0.alpha0+
Build ID: 78766aaa12ae4fae9dd2f3274617ba41de57eefd
Comment 9 Commit Notification 2020-02-25 18:55:08 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d5aeb48c7035c5518c4978760e93a49351a9e57a

tdf#123757 DOCX import: separate different style tables

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Timur 2020-03-22 18:27:35 UTC
Created attachment 158881 [details]
File in MSO and LO, before and after fix

Thanks. Verified.
Comment 11 Justin L 2020-06-03 11:26:08 UTC
*** Bug 109297 has been marked as a duplicate of this bug. ***