tdf#123757 DOCX import: separate different style tables

to avoid of losing table layout, color etc. during
their prohibited combination into one table: table
style of the second table overwrote the table style
of the first table, or without table style, the
second table was overwritten by the table style of
the first table.

Change-Id: I0a2663d41f7d019e7b329198944a300260025b65
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89416
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>